# livestream-data-pipeline

./: .gitignore  CHANGELOG.md  PracticeContent.txt  README.md  build.sh  docker-compose.yml  mock_data.json  pyproject.toml  requirements.txt  sample_data.json
.github/workflows/: ci-pipeline.yml  push.yml
docs/: architecture.drawio
src/: lambda_sorter.py  parse_json.py  web-ingesting.py  web_ingesting.py
terraform/: cloudwatch.tf  dynamo.tf  firehose.tf  glue.tf  iam.tf  kinesis-stream.tf  lambda.tf  main.tf  output.tf  roles.tf  s3.tf  sns.tf  triggers.tf  varriable.tf
tests/: data.py  test_flatting_data.py  test_parse_json.py  test_web_ingesting.py
tests/test_data/: data.py
workflows/: push.yml
