[tool.poetry.dependencies]
name = "Livestream Data Pipeline"
version = "1.0.0"
description = "Create data pipeline for ingesting web logs data to Datalake"
python = "~3.8"
project-model = {git = "git@github.com:longbuivan/livestream-data-pipeline.git", rev = "main"}


[tool.poetry.dev-dependencies]
boto3 = "1.14.3"
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
pylint = "~2.10"
dynamodb-json = "^1.3.0"
freezegun = "1.1.0"
pyodbc = "4.0.32"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"