[tool.poetry]
name = "livestream-data-pipeline"
version = "1.0.0"
description = "Create data pipeline for ingesting web logs data to Datalake"
authors = ["longbuivan <longbuivan@github.com>"]


[tool.poetry.dev-dependencies]
python = "~3.8"
boto3 = "1.14.3"
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
pylint = "~2.10"
dynamodb-json = "^1.3.0"
freezegun = "1.1.0"
pyodbc = "4.0.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"